--- a/ShopManager.Data.Db/ShopManager.Data.Db.csproj
+++ b/ShopManager.Data.Db/ShopManager.Data.Db.csproj
@@ -1,19 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
     <PackageReference Include="Ninject" Version="3.3.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ShopManager.Core\ShopManager.Core.csproj" />
-    <ProjectReference Include="..\ShopManager.Data.Db\ShopManager.Data.Db.csproj" />
     <ProjectReference Include="..\ShopManager.Data\ShopManager.Data.csproj" />
-    <ProjectReference Include="..\ShopManager.Implement\ShopManager.Implement.csproj" />
   </ItemGroup>
 
 </Project>
