--- a/Math.Calculator.Standard/Math.Calculator.Standard.csproj
+++ b/Math.Calculator.Standard/Math.Calculator.Standard.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LiteStandardCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardCalculator.cs" />
     <Compile Include="StandardDivideCalculationOperator.cs" />
