--- a/MyShopWebService/MyShopWebService.csproj
+++ b/MyShopWebService/MyShopWebService.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
@@ -12,6 +14,7 @@
     <ProjectReference Include="..\ShopManager.Core\ShopManager.Core.csproj" />
     <ProjectReference Include="..\ShopManager.Data.Db\ShopManager.Data.Db.csproj" />
     <ProjectReference Include="..\ShopManager.Data\ShopManager.Data.csproj" />
+    <ProjectReference Include="..\ShopManager.Implement.Infrastructure\ShopManager.Implement.Infrastructure.csproj" />
     <ProjectReference Include="..\ShopManager.Implement\ShopManager.Implement.csproj" />
   </ItemGroup>
 
