--- a/ShopManager.Implement.Infrastructure/ShopManager.Implement.Infrastructure.csproj
+++ b/ShopManager.Implement.Infrastructure/ShopManager.Implement.Infrastructure.csproj
@@ -5,13 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="9.1.3" />
-    <PackageReference Include="Ninject" Version="3.3.4" />
+    <PackageReference Include="Autofac" Version="5.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ShopManager.Core\ShopManager.Core.csproj" />
-    <ProjectReference Include="..\ShopManager.Data\ShopManager.Data.csproj" />
   </ItemGroup>
 
 </Project>
