--- a/ShopManager/ShopManager.csproj
+++ b/ShopManager/ShopManager.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.1.3" />
     <PackageReference Include="Ninject" Version="3.3.4" />
   </ItemGroup>
 
@@ -13,6 +14,7 @@
     <ProjectReference Include="..\ShopManager.Core\ShopManager.Core.csproj" />
     <ProjectReference Include="..\ShopManager.Data.Db\ShopManager.Data.Db.csproj" />
     <ProjectReference Include="..\ShopManager.Data\ShopManager.Data.csproj" />
+    <ProjectReference Include="..\ShopManager.Implement.Infrastructure\ShopManager.Implement.Infrastructure.csproj" />
     <ProjectReference Include="..\ShopManager.Implement\ShopManager.Implement.csproj" />
   </ItemGroup>
 
